# pyproject.toml

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "transformer_nuggets"
version = "0.0.1"
authors = [{ name = "Driss Guessous", email = "drisspguessous@gmail.com" }]
description = "A place to store reusable transformer components found around the interwebs"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "torch >= 2.2.1",
    "scipy >= 1.9.1",
    "tqdm >= 4.66",
    "tabulate >= 0.8",
    "rich==13.7.1"
]

[project.optional-dependencies]
dev = [
    "black==23.3.0",
    "usort==1.0.6",
    "ufmt==2.3.0",
    "libcst==1.1.0",
    "pre-commit==3.6.0",
    "bumpver",
    "pip-tools",
    "pytest",
    "ruff==0.3.0",
    "jsonargparse",
    "docstring-parser"
]

qlora = ['bitsandbytes']
flash = ['triton']

llama = [
    "sentencepiece==0.1.99",
    "datasets==2.15.0",
    "fire==0.5.0",
    "float8_experimental",
]

# ---------- TOOL CONFIGURATIONS ------------

# ---------- RUFF ------------
[tool.ruff]
ignore = ['E231', 'E731']
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

# ---------- UFMT ------------

[tool.usort]
first_party_detection = false

# ---------- Black ------------
[tool.black]
target-version = ["py38"]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
